Add support for RSET command